5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1888_3185.log
== TEST (2019-07-09 16:10:58) 
-- CODE:
from numpy import *
s = input("Digite: ")
for i in range(s):
	s[-1] = s[-1] - 1
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:11:32) 
-- CODE:
from numpy import *
s = array(eval(input("Digite: ")))
for i in range(s):
	s[-1] = s[-1] - 1
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:11:58) 
-- CODE:
from numpy import *
s = array(str(input("Digite: ")))
for i in range(s):
	s[-1] = s[-1] - 1
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:12:49) 
-- CODE:
from numpy import *
s = array(eval(input("Digite: ")))
for i in range(s):
	s[-1] = s[-1] - 1
print(str(s))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:14:18) 
-- CODE:
from numpy import *
s = str(input("Digite: ")))
for i in range(s):
	s[-1] = s[-1] - 1
print(str(s))

-- ERROR:
File "XXXX", line 2
    s = str(input()))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:14:25) 
-- CODE:
from numpy import *
s = str(input("Digite: "))
for i in range(s):
	s[-1] = s[-1] - 1
print(str(s))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:14:49) 
-- CODE:
from numpy import *
s = str(input("Digite: "))
for i in range(size(s)):
	s[-1] = s[-1] - 1
print(str(s))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:16:04) 
-- CODE:
from numpy import *
s = str(input("Digite: "))
for i in range(size(s)):
	s[i] = s[i] + (size(s)-1)
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:16:35) 
-- CODE:
from numpy import *
s = str(input("Digite: "))
for i in range(size(s)):
	s[i] = s[i] + s[(size(s)-1)]
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:23:11) 
-- CODE:
from numpy import *
s = str(input("Digite: "))
a = ""
for i in range(size(s)):
	a = s[-1] + (s[-1]-1)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:23:56) 
-- CODE:
from numpy import *
s = array(str(input("Digite: ")))
a = ""
for i in range(size(s)):
	a = s[-1] + (s[-1]-1)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:24:25) 
-- CODE:
from numpy import *
a = ""
s = array(str(input("Digite: ")))
for i in range(size(s)):
	a = s[-1] + (s[-1]-1)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:32:47) 
-- CODE:
from numpy import *
a = ""
s = array(str(input("Digite: ")))
for i in range(size(s)):
	a = s[-1] + s[-2]-1
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:32:51) 
-- CODE:
from numpy import *
a = ""
s = array(str(input("Digite: ")))
for i in range(size(s)):
	a = s[-1] + s[-2]
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:34:05) 
-- CODE:
from numpy import *
a = ""
s = array(str(input("Digite: ")))
for i in range(size(s)):
	a = s[size(s)] + s[size(s)-1]
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:44:16) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
m = 0
for i in range(size(v)):
	m = v[i] * v[i + 1]
M = sum(m)/(1/size(v))
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:46:39) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
m = 0
for i in range(size(v)):
	m = v[0] * v[1]
	m = m + 1
M = sum(m)/(1/size(v))
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
